--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Outfit:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.inria-sans {
+  font-family: "Inria Sans", sans-serif;
+  font-weight: 900;
+  font-style: bold;
+}
 
 * {
   background-color:beige;
